fix the extra white space on the home page

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -1123,6 +1123,11 @@ caption {
   outline: none;
 }
 
+.TestimonialsCardWrapper {
+  width: 100%;
+  margin: 0 auto;
+}
+
 .patchCardWrapper a {
   outline: none;
 }
