--- a/client/src/styles/partials/_testimonials.scss
+++ b/client/src/styles/partials/_testimonials.scss
@@ -48,3 +48,8 @@
 .review-card:focus {
     outline: none;
 }
+
+.TestimonialsCardWrapper {
+    width: 100%;
+    margin: 0 auto;
+}
